--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <p>Atendimento Especializado</p>
         <div class="container">
             <div class="center">
-                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de Emitir a 2ª via do boleto." target="_blank!">Emitir 2ª via do boleto</a></button>
-                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de negociar as parcelas em atraso." target="_blank!">Negociar parcelas em atraso</a></button>
-                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de adiantar algumas parcelas." target="_blank!">Adiantar parcelas com desconto</a></button>
-                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de quitar meu financiamento." target="_blank!">Quitar financiamento com desconto</a></button>
+                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de Emitir a 2ª via do boleto." target="_blank!">1ª Opção</a></button>
+                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de negociar as parcelas em atraso." target="_blank!">2ª Opção</a></button>
+                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de adiantar algumas parcelas." target="_blank!">3ª Opção</a></button>
+                <button class="button"><a href="https://wa.me/5511985845952?text=Olá! Eu gostaria de quitar meu financiamento." target="_blank!">4ª Opção</a></button>
             </div>
         </div>
         <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"> </script>
